--- a/linearregressionbmi.ipynb
+++ b/linearregressionbmi.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6cd0207a",
+   "id": "528d767f",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2025-09-05T09:46:26.954100Z",
-     "iopub.status.busy": "2025-09-05T09:46:26.953782Z",
-     "iopub.status.idle": "2025-09-05T09:46:28.959102Z",
-     "shell.execute_reply": "2025-09-05T09:46:28.958035Z"
+     "iopub.execute_input": "2025-09-05T09:55:28.315476Z",
+     "iopub.status.busy": "2025-09-05T09:55:28.315144Z",
+     "iopub.status.idle": "2025-09-05T09:55:30.129598Z",
+     "shell.execute_reply": "2025-09-05T09:55:30.128592Z"
     },
     "papermill": {
-     "duration": 2.014856,
-     "end_time": "2025-09-05T09:46:28.960835",
+     "duration": 1.823361,
+     "end_time": "2025-09-05T09:55:30.131285",
      "exception": false,
-     "start_time": "2025-09-05T09:46:26.945979",
+     "start_time": "2025-09-05T09:55:28.307924",
      "status": "completed"
     },
     "tags": []
@@ -53,13 +53,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "393f3453",
+   "id": "aed84940",
    "metadata": {
     "papermill": {
-     "duration": 0.005233,
-     "end_time": "2025-09-05T09:46:28.971993",
+     "duration": 0.005014,
+     "end_time": "2025-09-05T09:55:30.141874",
      "exception": false,
-     "start_time": "2025-09-05T09:46:28.966760",
+     "start_time": "2025-09-05T09:55:30.136860",
      "status": "completed"
     },
     "tags": []
@@ -79,13 +79,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b1559b1",
+   "id": "2fb991bf",
    "metadata": {
     "papermill": {
-     "duration": 0.00506,
-     "end_time": "2025-09-05T09:46:28.982451",
+     "duration": 0.00476,
+     "end_time": "2025-09-05T09:55:30.151735",
      "exception": false,
-     "start_time": "2025-09-05T09:46:28.977391",
+     "start_time": "2025-09-05T09:55:30.146975",
      "status": "completed"
     },
     "tags": []
@@ -113,13 +113,13 @@
     }
    },
    "cell_type": "markdown",
-   "id": "92abca58",
+   "id": "ab741885",
    "metadata": {
     "papermill": {
-     "duration": 0.005118,
-     "end_time": "2025-09-05T09:46:28.993242",
+     "duration": 0.004729,
+     "end_time": "2025-09-05T09:55:30.161527",
      "exception": false,
-     "start_time": "2025-09-05T09:46:28.988124",
+     "start_time": "2025-09-05T09:55:30.156798",
      "status": "completed"
     },
     "tags": []
@@ -144,13 +144,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73d83566",
+   "id": "dc5085e6",
    "metadata": {
     "papermill": {
-     "duration": 0.005175,
-     "end_time": "2025-09-05T09:46:29.003774",
+     "duration": 0.004804,
+     "end_time": "2025-09-05T09:55:30.171332",
      "exception": false,
-     "start_time": "2025-09-05T09:46:28.998599",
+     "start_time": "2025-09-05T09:55:30.166528",
      "status": "completed"
     },
     "tags": []
@@ -162,19 +162,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "98282935",
+   "id": "9def5007",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-05T09:46:29.015840Z",
-     "iopub.status.busy": "2025-09-05T09:46:29.015399Z",
-     "iopub.status.idle": "2025-09-05T09:46:29.020176Z",
-     "shell.execute_reply": "2025-09-05T09:46:29.019065Z"
+     "iopub.execute_input": "2025-09-05T09:55:30.182477Z",
+     "iopub.status.busy": "2025-09-05T09:55:30.182062Z",
+     "iopub.status.idle": "2025-09-05T09:55:30.186070Z",
+     "shell.execute_reply": "2025-09-05T09:55:30.185377Z"
     },
     "papermill": {
-     "duration": 0.013304,
-     "end_time": "2025-09-05T09:46:29.022362",
+     "duration": 0.011304,
+     "end_time": "2025-09-05T09:55:30.187500",
      "exception": false,
-     "start_time": "2025-09-05T09:46:29.009058",
+     "start_time": "2025-09-05T09:55:30.176196",
      "status": "completed"
     },
     "tags": []
@@ -187,13 +187,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99011aad",
+   "id": "099fea0c",
    "metadata": {
     "papermill": {
-     "duration": 0.00512,
-     "end_time": "2025-09-05T09:46:29.033953",
+     "duration": 0.004824,
+     "end_time": "2025-09-05T09:55:30.197392",
      "exception": false,
-     "start_time": "2025-09-05T09:46:29.028833",
+     "start_time": "2025-09-05T09:55:30.192568",
      "status": "completed"
     },
     "tags": []
@@ -205,19 +205,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "05e26bba",
+   "id": "a1afba43",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-05T09:46:29.047912Z",
-     "iopub.status.busy": "2025-09-05T09:46:29.047599Z",
-     "iopub.status.idle": "2025-09-05T09:46:29.071867Z",
-     "shell.execute_reply": "2025-09-05T09:46:29.070646Z"
+     "iopub.execute_input": "2025-09-05T09:55:30.209099Z",
+     "iopub.status.busy": "2025-09-05T09:55:30.208751Z",
+     "iopub.status.idle": "2025-09-05T09:55:30.228195Z",
+     "shell.execute_reply": "2025-09-05T09:55:30.227264Z"
     },
     "papermill": {
-     "duration": 0.034108,
-     "end_time": "2025-09-05T09:46:29.073521",
+     "duration": 0.027694,
+     "end_time": "2025-09-05T09:55:30.229923",
      "exception": false,
-     "start_time": "2025-09-05T09:46:29.039413",
+     "start_time": "2025-09-05T09:55:30.202229",
      "status": "completed"
     },
     "tags": []
@@ -230,13 +230,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d64946da",
+   "id": "509205cd",
    "metadata": {
     "papermill": {
-     "duration": 0.005284,
-     "end_time": "2025-09-05T09:46:29.084954",
+     "duration": 0.00456,
+     "end_time": "2025-09-05T09:55:30.239616",
      "exception": false,
-     "start_time": "2025-09-05T09:46:29.079670",
+     "start_time": "2025-09-05T09:55:30.235056",
      "status": "completed"
     },
     "tags": []
@@ -248,19 +248,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4f085d46",
+   "id": "9855cb09",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-05T09:46:29.097890Z",
-     "iopub.status.busy": "2025-09-05T09:46:29.097580Z",
-     "iopub.status.idle": "2025-09-05T09:46:29.113196Z",
-     "shell.execute_reply": "2025-09-05T09:46:29.111909Z"
+     "iopub.execute_input": "2025-09-05T09:55:30.250592Z",
+     "iopub.status.busy": "2025-09-05T09:55:30.250025Z",
+     "iopub.status.idle": "2025-09-05T09:55:30.264738Z",
+     "shell.execute_reply": "2025-09-05T09:55:30.263598Z"
     },
     "papermill": {
-     "duration": 0.024062,
-     "end_time": "2025-09-05T09:46:29.114802",
+     "duration": 0.021968,
+     "end_time": "2025-09-05T09:55:30.266369",
      "exception": false,
-     "start_time": "2025-09-05T09:46:29.090740",
+     "start_time": "2025-09-05T09:55:30.244401",
      "status": "completed"
     },
     "tags": []
@@ -288,19 +288,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "15cc934d",
+   "id": "a3eacd77",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-05T09:46:29.126964Z",
-     "iopub.status.busy": "2025-09-05T09:46:29.126659Z",
-     "iopub.status.idle": "2025-09-05T09:46:29.152517Z",
-     "shell.execute_reply": "2025-09-05T09:46:29.151486Z"
+     "iopub.execute_input": "2025-09-05T09:55:30.277367Z",
+     "iopub.status.busy": "2025-09-05T09:55:30.277077Z",
+     "iopub.status.idle": "2025-09-05T09:55:30.300141Z",
+     "shell.execute_reply": "2025-09-05T09:55:30.299112Z"
     },
     "papermill": {
-     "duration": 0.03382,
-     "end_time": "2025-09-05T09:46:29.154092",
+     "duration": 0.030308,
+     "end_time": "2025-09-05T09:55:30.301746",
      "exception": false,
-     "start_time": "2025-09-05T09:46:29.120272",
+     "start_time": "2025-09-05T09:55:30.271438",
      "status": "completed"
     },
     "tags": []
@@ -336,19 +336,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "af6184bb",
+   "id": "2b95e125",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-05T09:46:29.166729Z",
-     "iopub.status.busy": "2025-09-05T09:46:29.166437Z",
-     "iopub.status.idle": "2025-09-05T09:46:29.190287Z",
-     "shell.execute_reply": "2025-09-05T09:46:29.189372Z"
+     "iopub.execute_input": "2025-09-05T09:55:30.313109Z",
+     "iopub.status.busy": "2025-09-05T09:55:30.312768Z",
+     "iopub.status.idle": "2025-09-05T09:55:30.331258Z",
+     "shell.execute_reply": "2025-09-05T09:55:30.330173Z"
     },
     "papermill": {
-     "duration": 0.032082,
-     "end_time": "2025-09-05T09:46:29.191941",
+     "duration": 0.025624,
+     "end_time": "2025-09-05T09:55:30.332636",
      "exception": false,
-     "start_time": "2025-09-05T09:46:29.159859",
+     "start_time": "2025-09-05T09:55:30.307012",
      "status": "completed"
     },
     "tags": []
@@ -378,62 +378,35 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65a6c4e9",
+   "id": "f18174c1",
    "metadata": {
     "papermill": {
-     "duration": 0.005516,
-     "end_time": "2025-09-05T09:46:29.203673",
+     "duration": 0.004761,
+     "end_time": "2025-09-05T09:55:30.342661",
      "exception": false,
-     "start_time": "2025-09-05T09:46:29.198157",
+     "start_time": "2025-09-05T09:55:30.337900",
      "status": "completed"
     },
     "tags": []
    },
    "source": [
-    "# **5. Normal Equation (closed-form OLS)** <a class=\"anchor\" id=\"5\"></a>"
+    "# **5. Normal Equation (closed-form OLS)** <a class=\"anchor\" id=\"6\"></a>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8c48b41d",
+   "id": "7d886f70",
    "metadata": {
     "papermill": {
-     "duration": 0.005766,
-     "end_time": "2025-09-05T09:46:29.215799",
+     "duration": 0.004812,
+     "end_time": "2025-09-05T09:55:30.352420",
      "exception": false,
-     "start_time": "2025-09-05T09:46:29.210033",
+     "start_time": "2025-09-05T09:55:30.347608",
      "status": "completed"
     },
     "tags": []
    },
    "source": [
-    "# <span style=\"font-size:36px;\">-------- Linear Regression and the Normal Equation ----------</span>\n",
-    "\n",
-    "---\n",
-    "\n",
-    "## <span style=\"font-size:28px;\">The Problem</span>\n",
-    "\n",
-    "## <span style=\"font-size:24px;\">In **linear regression**, we want to find the best coefficients **(β)**  that make our line (or plane) fit the data.\n",
-    "</span> \n",
-    "\n",
-    "<div style=\"font-size:28px; margin-top:10px; margin-bottom:10px;\">\n",
-    "\\[\n",
-    "y = X\\beta + \\epsilon\n",
-    "\\]\n",
-    "</div>\n",
-    "\n",
-    "# <span style=\"font-size:24px;\">- y → target values (e.g., BMI)</span> \n",
-    "\n",
-    "\n",
-    "# <span style=\"font-size:24px;\">- x → features (Height, Weight, etc.)  </span> \n",
-    "\n",
-    "\n",
-    "# <span style=\"font-size:24px;\">- beta → coefficients we want to calculate  </span> \n",
-    "\n",
-    "\n",
-    "# <span style=\"font-size:24px;\">- e → error term  </span> \n",
-    "\n",
-    "\n",
     "# ---------- Normal Equation ----------\n",
     "<div style=\"font-size:20px; margin-top:10px; margin-bottom:10px;\">\n",
     "\n",
@@ -453,19 +426,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4f7950c3",
+   "id": "f9e03fc5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-05T09:46:29.230029Z",
-     "iopub.status.busy": "2025-09-05T09:46:29.229671Z",
-     "iopub.status.idle": "2025-09-05T09:46:29.244341Z",
-     "shell.execute_reply": "2025-09-05T09:46:29.243382Z"
+     "iopub.execute_input": "2025-09-05T09:55:30.363457Z",
+     "iopub.status.busy": "2025-09-05T09:55:30.363137Z",
+     "iopub.status.idle": "2025-09-05T09:55:30.376092Z",
+     "shell.execute_reply": "2025-09-05T09:55:30.375087Z"
     },
     "papermill": {
-     "duration": 0.024379,
-     "end_time": "2025-09-05T09:46:29.245907",
+     "duration": 0.020471,
+     "end_time": "2025-09-05T09:55:30.377755",
      "exception": false,
-     "start_time": "2025-09-05T09:46:29.221528",
+     "start_time": "2025-09-05T09:55:30.357284",
      "status": "completed"
     },
     "tags": []
@@ -568,13 +541,13 @@
     }
    },
    "cell_type": "markdown",
-   "id": "90243393",
+   "id": "e4d7d928",
    "metadata": {
     "papermill": {
-     "duration": 0.005501,
-     "end_time": "2025-09-05T09:46:29.257702",
+     "duration": 0.004917,
+     "end_time": "2025-09-05T09:55:30.387994",
      "exception": false,
-     "start_time": "2025-09-05T09:46:29.252201",
+     "start_time": "2025-09-05T09:55:30.383077",
      "status": "completed"
     },
     "tags": []
@@ -587,19 +560,36 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e514dd6f",
+   "id": "9f991d74",
    "metadata": {
     "papermill": {
-     "duration": 0.00544,
-     "end_time": "2025-09-05T09:46:29.268818",
+     "duration": 0.004739,
+     "end_time": "2025-09-05T09:55:30.397911",
      "exception": false,
-     "start_time": "2025-09-05T09:46:29.263378",
+     "start_time": "2025-09-05T09:55:30.393172",
      "status": "completed"
     },
     "tags": []
    },
    "source": [
-    "# **Loss Function**"
+    "# **6. Gradient Descent** <a class=\"anchor\" id=\"7\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f26c1e21",
+   "metadata": {
+    "papermill": {
+     "duration": 0.004672,
+     "end_time": "2025-09-05T09:55:30.407570",
+     "exception": false,
+     "start_time": "2025-09-05T09:55:30.402898",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "# **7. Loss Function** <a class=\"anchor\" id=\"5\"></a>"
    ]
   },
   {
@@ -612,13 +602,13 @@
     }
    },
    "cell_type": "markdown",
-   "id": "87d8775b",
+   "id": "f43f3d74",
    "metadata": {
     "papermill": {
-     "duration": 0.005389,
-     "end_time": "2025-09-05T09:46:29.279941",
+     "duration": 0.004749,
+     "end_time": "2025-09-05T09:55:30.417359",
      "exception": false,
-     "start_time": "2025-09-05T09:46:29.274552",
+     "start_time": "2025-09-05T09:55:30.412610",
      "status": "completed"
     },
     "tags": []
@@ -631,98 +621,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1245e71",
+   "id": "d0d1b9d0",
    "metadata": {
     "papermill": {
-     "duration": 0.005899,
-     "end_time": "2025-09-05T09:46:29.291521",
+     "duration": 0.004658,
+     "end_time": "2025-09-05T09:55:30.426881",
      "exception": false,
-     "start_time": "2025-09-05T09:46:29.285622",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "**Normal Equation**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e3f15c0b",
-   "metadata": {
-    "papermill": {
-     "duration": 0.005369,
-     "end_time": "2025-09-05T09:46:29.302613",
-     "exception": false,
-     "start_time": "2025-09-05T09:46:29.297244",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "**Gradient Descent**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4309e946",
-   "metadata": {
-    "papermill": {
-     "duration": 0.005379,
-     "end_time": "2025-09-05T09:46:29.313614",
-     "exception": false,
-     "start_time": "2025-09-05T09:46:29.308235",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "**Batch Gradient Descent**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2e0ee985",
-   "metadata": {
-    "papermill": {
-     "duration": 0.005955,
-     "end_time": "2025-09-05T09:46:29.325344",
-     "exception": false,
-     "start_time": "2025-09-05T09:46:29.319389",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "**Stochastic Gradient Descent (SGD)**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ae8ce3e5",
-   "metadata": {
-    "papermill": {
-     "duration": 0.005405,
-     "end_time": "2025-09-05T09:46:29.336417",
-     "exception": false,
-     "start_time": "2025-09-05T09:46:29.331012",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "**Mini-Batch Gradient Descent**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "43759199",
-   "metadata": {
-    "papermill": {
-     "duration": 0.005404,
-     "end_time": "2025-09-05T09:46:29.347474",
-     "exception": false,
-     "start_time": "2025-09-05T09:46:29.342070",
+     "start_time": "2025-09-05T09:55:30.422223",
      "status": "completed"
     },
     "tags": []
@@ -733,13 +638,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7757558",
+   "id": "26aea317",
    "metadata": {
     "papermill": {
-     "duration": 0.005479,
-     "end_time": "2025-09-05T09:46:29.358651",
+     "duration": 0.004736,
+     "end_time": "2025-09-05T09:55:30.436438",
      "exception": false,
-     "start_time": "2025-09-05T09:46:29.353172",
+     "start_time": "2025-09-05T09:55:30.431702",
      "status": "completed"
     },
     "tags": []
@@ -750,13 +655,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fc12793",
+   "id": "3ec268ec",
    "metadata": {
     "papermill": {
-     "duration": 0.005423,
-     "end_time": "2025-09-05T09:46:29.370132",
+     "duration": 0.004717,
+     "end_time": "2025-09-05T09:55:30.446112",
      "exception": false,
-     "start_time": "2025-09-05T09:46:29.364709",
+     "start_time": "2025-09-05T09:55:30.441395",
      "status": "completed"
     },
     "tags": []
@@ -767,13 +672,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "556c9be3",
+   "id": "010fb80f",
    "metadata": {
     "papermill": {
-     "duration": 0.00541,
-     "end_time": "2025-09-05T09:46:29.381184",
+     "duration": 0.004648,
+     "end_time": "2025-09-05T09:55:30.455766",
      "exception": false,
-     "start_time": "2025-09-05T09:46:29.375774",
+     "start_time": "2025-09-05T09:55:30.451118",
      "status": "completed"
     },
     "tags": []
@@ -784,13 +689,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91ea5cbb",
+   "id": "c3e6dd6a",
    "metadata": {
     "papermill": {
-     "duration": 0.005554,
-     "end_time": "2025-09-05T09:46:29.392472",
+     "duration": 0.004903,
+     "end_time": "2025-09-05T09:55:30.465549",
      "exception": false,
-     "start_time": "2025-09-05T09:46:29.386918",
+     "start_time": "2025-09-05T09:55:30.460646",
      "status": "completed"
     },
     "tags": []
@@ -801,13 +706,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cd093b5",
+   "id": "d31363b8",
    "metadata": {
     "papermill": {
-     "duration": 0.005371,
-     "end_time": "2025-09-05T09:46:29.403520",
+     "duration": 0.004725,
+     "end_time": "2025-09-05T09:55:30.475377",
      "exception": false,
-     "start_time": "2025-09-05T09:46:29.398149",
+     "start_time": "2025-09-05T09:55:30.470652",
      "status": "completed"
     },
     "tags": []
@@ -815,21 +720,6 @@
    "source": [
     "**P-value**"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "be5ccc9e",
-   "metadata": {
-    "papermill": {
-     "duration": 0.005656,
-     "end_time": "2025-09-05T09:46:29.414843",
-     "exception": false,
-     "start_time": "2025-09-05T09:46:29.409187",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": []
   }
  ],
  "metadata": {
@@ -867,14 +757,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 8.700489,
-   "end_time": "2025-09-05T09:46:29.941623",
+   "duration": 7.788798,
+   "end_time": "2025-09-05T09:55:30.999548",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2025-09-05T09:46:21.241134",
+   "start_time": "2025-09-05T09:55:23.210750",
    "version": "2.6.0"
   }
  },
